--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "dealers_choice_js",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +14,14 @@
   "bugs": {
     "url": "https://github.com/ehang11/dealers_choice_js/issues"
   },
-  "homepage": "https://github.com/ehang11/dealers_choice_js#readme"
+  "homepage": "https://github.com/ehang11/dealers_choice_js#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "html-template-tag": "^4.0.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  },
+  "description": ""
 }
